[gd_scene load_steps=5 format=3 uid="uid://cwfeycqnbob1y"]

[ext_resource type="Script" path="res://objects/battle/battle_manager/battle_manager.gd" id="1_jfi3m"]
[ext_resource type="FontFile" uid="uid://cup2yr5w7or1l" path="res://fonts/Minnie.TTF" id="2_nyi5o"]

[sub_resource type="LabelSettings" id="LabelSettings_j00wc"]
font = ExtResource("2_nyi5o")
font_size = 64
font_color = Color(1, 0, 0, 1)
shadow_size = 11
shadow_color = Color(0.448949, 2.05157e-06, 2.16588e-07, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sg3ye"]
font = ExtResource("2_nyi5o")
font_size = 42
font_color = Color(1, 0.427451, 0, 1)
shadow_size = 8
shadow_color = Color(0.358869, 0.134262, 0, 1)

[node name="BattleManager" type="Node"]
script = ExtResource("1_jfi3m")

[node name="SceneTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -276.5
offset_top = 35.0
offset_right = 276.5
offset_bottom = 100.0
grow_horizontal = 2
text = "ATTACK NAME"
label_settings = SubResource("LabelSettings_j00wc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SummaryLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -215.0
offset_top = 103.0
offset_right = 216.0
offset_bottom = 146.0
grow_horizontal = 2
text = "Attack Summary"
label_settings = SubResource("LabelSettings_sg3ye")
horizontal_alignment = 1
vertical_alignment = 1
